[gd_scene load_steps=4 format=3 uid="uid://dd6yahof0ui0a"]

[ext_resource type="Script" path="res://UI/end_screen.gd" id="1_hd3h4"]
[ext_resource type="Theme" uid="uid://b807bm2g6mjc8" path="res://UI/Themes/ButtonTheme.tres" id="1_if0aw"]
[ext_resource type="Theme" uid="uid://bdvq1nuj5gsiv" path="res://UI/Themes/LabelTheme.tres" id="2_dxq3o"]

[node name="EndScreen" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hd3h4")

[node name="VictoryContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 64.0
grow_horizontal = 2

[node name="PreLabel" type="Label" parent="VictoryContainer"]
layout_mode = 2
theme = ExtResource("2_dxq3o")
theme_override_font_sizes/font_size = 48
text = "This game's winner is"
horizontal_alignment = 1

[node name="WinnerLabel" type="Label" parent="VictoryContainer"]
layout_mode = 2
theme = ExtResource("2_dxq3o")
theme_override_font_sizes/font_size = 92
text = "SOMEONE COOL"
horizontal_alignment = 1

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -305.0
offset_top = -228.0
offset_right = 305.0
offset_bottom = -32.0
grow_horizontal = 2
grow_vertical = 0

[node name="PlayAgainButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_if0aw")
theme_override_font_sizes/font_size = 64
text = "Play Again"

[node name="TitleButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
theme = ExtResource("1_if0aw")
theme_override_font_sizes/font_size = 64
text = "Return to Title"

[connection signal="pressed" from="VBoxContainer/PlayAgainButton" to="." method="_on_play_again_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TitleButton" to="." method="_on_title_button_pressed"]
